browsing issue added

--- a/src/client/app/layout/shell.html
+++ b/src/client/app/layout/shell.html
@@ -1,17 +1,12 @@
 <div class="container">
- shell
-  <!--  <header>
+
+  <header>
         <div data-ng-include="'app/layout/topnav.html'"></div>
-    </header>
+  </header>
 
-    <section id="content" class="content">
-        <div data-ng-include="'app/layout/sidebar.html'"></div>
+  <section id="content" class="content">
+      <div ui-view id="ng-view" class="container slide-animation admin-content"></div>
+  </section>
 
-        <div data-ng-view class="shuffle-animation"></div>
-    </section>
- -->
-   <!-- <img src="images/one.jpg" /> -->
-
-    <div ui-view id="ng-view" class="container slide-animation admin-content"></div>
 </div>
 
