--- a/src/client/app/layout/topnav.html
+++ b/src/client/app/layout/topnav.html
@@ -8,11 +8,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">Главная </a>
+            <a class="navbar-brand" href="/">Issues </a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <!--<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Заказы <span class="caret"></span></a>
@@ -48,6 +48,6 @@
                 <li><a href="#" ng-bind="vm.user.username"></a></li>
                 <li><a ng-click="vm.logout()" href="#">Выйти</a></li>
             </ul>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
+        </div>-->
+    </div>
 </nav>
