--- a/src/client/css/styles.less
+++ b/src/client/css/styles.less
@@ -13,3 +13,12 @@ h1 {
   font-size: 24px;
 }
 
+.progress-32 {
+  position: absolute;
+  width: 32px;
+  height: 32px;
+  background-image:  url('../images/progress32.gif');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
