--- a/src/client/css/styles.css
+++ b/src/client/css/styles.css
@@ -8,3 +8,12 @@ h1 {
   margin-top: 0;
   font-size: 24px;
 }
+.progress-32 {
+  position: absolute;
+  width: 32px;
+  height: 32px;
+  background-image: url('../images/progress32.gif');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
