--- a/src/client/app/layout/shell.html
+++ b/src/client/app/layout/shell.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" my-progress="shell-progress">
 
   <header>
         <div data-ng-include="'app/layout/topnav.html'"></div>
