--- a/src/client/app/issues/issues.less
+++ b/src/client/app/issues/issues.less
@@ -1,11 +1,14 @@
 .issues {
 
 
-
-  .no-results {
-    font-size: small;
-    color: #b6b6b6;
+  form {
+    margin-right: 30px;
+    .no-results {
+      font-size: small;
+      color: #b6b6b6;
+    }
   }
+
 
   .issues-results {
     list-style: none;
