--- a/src/client/app/layout/shell.html
+++ b/src/client/app/layout/shell.html
@@ -5,7 +5,7 @@
   </header>
 
   <section id="content" class="content">
-      <div ui-view id="ng-view" class="container slide-animation admin-content"></div>
+      <div ui-view id="ng-view"></div>
   </section>
 
 </div>
