styles, fonts, images in production fixed

--- a/src/client/css/styles.css
+++ b/src/client/css/styles.css
@@ -19,3 +19,8 @@ h1 {
   background-repeat: no-repeat;
   background-position: center center;
 }
+.form-inline label,
+.form-inline input,
+.form-inline button {
+  margin-right: 5px;
+}
