--- a/src/client/css/styles.less
+++ b/src/client/css/styles.less
@@ -24,3 +24,9 @@ h1 {
   background-repeat: no-repeat;
   background-position: center center;
 }
+
+.form-inline {
+  label, input, button {
+    margin-right: 5px;
+  }
+}
